    links) to match Mediawiki behavior.
  * Allow the table of contents to be hidden via a "show/hide" link.
  * Move hard-coded HTML to template files to allow simpler customization of
    images, table of contents, and other elements.
  * Add support for the Mediawiki {{padleft:}} and {{padright:}} parser
    functions.  Usage: "{{padleft:string|amt|padString}}".
  * {{REVISIONMONTH}} is no longer padded ("4" instead of "04") while
    {{REVISIONMONTH1}} has been added in order to match Mediawiki behavior.
  * Allow page name and namespace magic words to specify the page to be
    operated on, instead of just the current page, to match Mediawiki behavior.
    Example: "{{PAGENAME:Template:Main Page}}".
  * Remove ability to automatically upgrade from versions prior to 1.0.
  * Upgrade to commons-lang 3.0.1.

Bugfixes:

  * "{{ns:}}" should return the same value as "{{ns:0}}" to match Mediawiki.
  * Topic exports containing UTF-8 should not escape unicode characters.
    Reported by cstenkes.

Translation Updates:

  * None.


1.1.1
=====

New Features:

  * None.

Bugfixes:

  * Merge all fixes from JAMWiki 1.0.7.
  * Heading text and wiki link text that starts with a list tag (example:
    "#if" or "[[Link|#text]]") was improperly being parsed as a list item.
  * Spring security 3.0 changed how logout redirection is handled.  Update
    JAMWiki to redirect logout properly.  Note that this change modifies
    the applicationContext-security.xml file.  Reported by Leonardo Silva Kury
    Aragão Mendes.
  * Remove the "plainlinks" pattern from the spam blacklist since that CSS
    class is commonly used on Mediawiki sites.
  * Fix parsing of generated template names of the form "{{Name{{if:|1|2}}}}".
  * Upgrade to Lucene Search 3.4, which fixes a bug where operating system or
    hardware crash, or power loss, could easily corrupt the index.
  * Fix an issue where the cache isn't cleared when a topic version is purged.