@@ -1,0 +1,7 @@
+1. {{#expr:2e3}}
+
+2. {{#expr:2e(1.5*2)}}
+
+3. {{#expr:-2.3e-4}}
+
+4. {{#expr:30.5mod7.9}}
