@@ -295,6 +295,7 @@ common.delete=Delete
 common.exception.name=The requested value "{0}" was invalid. It may contain one or more characters which cannot be used in titles.
 common.exception.notopic=Invalid or missing topic name.
 common.exception.novirtualwiki=Invalid or missing virtual wiki.
+common.exception.expression=Expression error: {0}
 common.exception.pseudotopic={0} is a special topic that cannot be viewed or edited as a normal topic.
 common.exception.recaptcha=The CAPTCHA challenge words did not match the expected results.  Please enter the words pictured below.
 common.interval.days=Days
